Unread conversation count in tray / taskbar (Windows) (icon generated on-the-fly)

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "main": "app/background.js",
   "scripts": {
     "start": "yarn build:dev && cross-env NODE_ENV=development electron ./app/background.js",
-    "dist": "yarn build && electron-builder --config electron-builder.js",
+    "dist": "yarn build && ./node_modules/.bin/electron-builder --config electron-builder.js",
     "build": "webpack --mode=production",
     "build:dev": "webpack --mode=development",
     "icons": "png2icons assets/android_messages_desktop_icon.png resources/icon -all -i",
@@ -42,7 +42,7 @@
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.0",
     "electron": "11.1.1",
-    "electron-builder": "22.9.1",
+    "electron-builder": "^22.9.1",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.0",
