--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -14,8 +14,10 @@ jobs:
       matrix:
         os:
           - macos-latest
+          - windows-latest
+          - ubuntu-latest
         node-version:
-          - 17
+          - 20
 
     steps:
       - uses: actions/checkout@v4
@@ -32,12 +34,16 @@ jobs:
         env:
           cache-name: node-modules
 
+      - run: sudo apt-get update -y && sudo apt-get install --no-install-recommends -y libopenjp2-tools rpm libarchive-tools
+        name: Install Linux Dependencies
+        if: (startsWith(matrix.os, 'ubuntu'))
+
       - run: yarn install --frozen-lockfile
 
       - run: yarn dist --publish never
 
       - name: Upload Build
-        uses: actions/upload-artifact@v3.1.3
+        uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.os }}-${{ matrix.node-version }}
           path: ./dist
