--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "main": "app/background.js",
   "scripts": {
-    "start": "yarn build:dev && cross-env NODE_ENV=development electron ./app/background.js",
+    "start": "ELECTRON_ENABLE_LOGGING=1 ELECTRON_DEBUG_NOTIFICATIONS=true yarn build:dev && cross-env NODE_ENV=development electron --enable-logging ./app/background.js",
     "dist": "yarn build && yarn package",
     "build": "webpack --mode=production",
     "build:dev": "webpack --mode=development",
@@ -43,7 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^8.13.0",
     "@typescript-eslint/parser": "^8.13.0",
     "cross-env": "^7.0.2",
-    "electron": "20.1.4",
+    "electron": "^33.2.0",
     "electron-builder": "^24.13.3",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
