--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "main": "app/background.js",
   "scripts": {
-    "start": "ELECTRON_ENABLE_LOGGING=1 ELECTRON_DEBUG_NOTIFICATIONS=true yarn build:dev && cross-env NODE_ENV=development electron --enable-logging ./app/background.js",
+    "start": "yarn build:dev && cross-env NODE_ENV=development electron ./app/background.js",
     "dist": "yarn build && yarn package",
     "build": "webpack --mode=production",
     "build:dev": "webpack --mode=development",
